# On-Board-AI-Agent-Gemini

./: .gitleaks.toml  .pre-commit-config.yaml  CLAUDE.md  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
agents/: agent1_provisioning.py  agent2_learning.py  agent3_hrbuddy.py  orchestrator.py
data/: org_chart.json  schedules.json  tools_list.json
data/personas/: backend_engineer.json  marketing_lead.json  sales_manager.json
data/sessions/: karan_naik_ai_ml_engineer.json  karan_naik_ai_ml_intern.json
ui/: sidebar.py  styles.py  tab1_setup.py  tab2_learning.py  tab3_chat.py
utils/: doc_loader.py  export.py  gemini_client.py  progress.py  prompt_templates.py
